# hyrax-steering

./: .gitignore  Dockerfile.backend  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260331_0001_init_schema.py  20260401_0002_fix_intent_embeddings_fk.py  20260402_0003_add_unique_inference_result_request.py  20260405_0004_add_inference_telemetry_tables.py
app/: main.py
app/api/: auth.py  errors.py  middleware.py  routes.py
app/config/: logging.py  settings.py
app/db/: models.py  seed.py  session.py
app/domain/: schemas.py
app/eval/: run.py
app/services/: audio.py  confidence.py  repository.py  rerank.py  similarity.py  storage.py  telemetry.py
app/workers/: pipeline.py
data/eval/: tr_v1.jsonl
docs/: api-endpoints.md  cpu-gpu-switch-guide.md  incident-checklist.md  local-runbook.md  local-vllm.md  openshift-runbook.md  pipeline-and-schema-brief.md
model-serving/: README.md  docker-compose.yml
model-serving/embeddings-cpu/: Dockerfile  app.py  requirements.txt
model-serving/gateway/: Dockerfile  app.py  embedding_router.py  requirements.txt
plans/: intent-recognition-backend-implementation-plan.md
scripts/: backend.sh  dev-stack.sh  model-serving.sh
tests/: test_health.py
tests/api/: test_intents_api.py  test_overview_api.py
tests/contract/: test_inference_contract.py
tests/eval/: test_eval.py
tests/integration/: test_ingest_flow.py  test_pgvector_search.py  test_schema.py  test_worker_pipeline.py
tests/model_serving/: test_embeddings_cpu_score.py  (+1 more)
(+28 files in other folders)
